# kairos

./: .env.example  .gitignore  KAIROS.md  LICENSE  README.md  pyproject.toml
.claude/skills/predict/: SKILL.md
.github/workflows/: tests.yml
engine/: backtest.py  config.py  constants.py  edge.py  elo.py  example_spec.json  kelly.py  ledger.py  market.py  monte_carlo.py  poisson.py  report.py  run.py  test_edge.py  test_engine.py  test_ledger.py  test_sources.py
engine/fixtures/: fd_sample.csv  odds_sample.json  understat_sample.html
engine/sources/: __init__.py  clubelo.py  footballdata.py  odds_api.py  understat.py
knowledge/: 00-layer-stack.md  context-and-traps.md  market-reading.md  reference-tables.md  staking-kelly.md  tactics-playbook.md
ledger/: calibration.md  predictions.jsonl  results.jsonl
output-templates/: prediction-report.md
protocols/: contradiction-check.md  enrich.md  predict.md  screenshot-intake.md  value-scan.md
